# PQC---Post-Quantum-Chatting

./: .gitignore  AUDIO_BUFFER_FIXES.md  AUDIO_FEATURE.md  AUDIO_TEST_QUICK_START.md  Cargo.toml  KYBER_TESTING_GUIDE.md  LATENCY_OPTIMIZATIONS.md  NETWORK_SETUP.md  README.md  README_PI_NETWORK.md  TESTING_AUDIO.md  ULTRA_LOW_LATENCY.md  monitor_audio.sh  requirements.txt  run_server.py  test_audio.sh  test_broadcast.sh  update_gui.sh  verify_audio.sh
client/: __init__.py  av_capture.py  client_engine.py  media_transport.py  signaling_client.py
config/: client.conf  client.toml  client1_pi.toml  client2_pi.toml  server.conf  server.toml  server_client_pi.toml  server_pi.toml  server_test.toml
gui/: __init__.py  main_window.py
results/: README.md
results/kyber_demo_20251207_062846/: README.md  server_logs.txt  summary.txt  system_info.txt  test3_json_data.json
results/kyber_demo_20251207_063523/: README.md  server_logs.txt  summary.txt  system_info.txt  test3_json_data.json
scripts/: demo_kyber_testing.sh  deploy_pi_network.sh  generate_certs.sh  install_client.sh  install_server.sh  kyber_performance_logger.py  kyber_test.sh  run_client.sh  run_server.sh
server/: __init__.py  media_forwarder.py  room_manager.py  server.py  tls_listener.py
src/: audio.rs  audio_codec.rs  config.rs  interactive_client.rs  lib.rs  media.rs  protocol.rs  room.rs  udp_audio.rs
src/client/: kyber_test_client.rs  legacy_simple_main.rs  main.rs
src/crypto/: kyber.rs  (+1 more)
systemd/: pqc-chat-client@.service  pqc-chat-server.service
tests/: __init__.py  test_av_capture.py  test_integration.py  test_media_forwarder.py  test_media_transport.py  test_room_manager.py  test_scripts.py
(+3 files in other folders)
