[package]
name = "pqc-chat"
version = "0.1.0"
edition = "2021"
description = "LAN-based post-quantum secure audio/video chat system"
license = "MIT"

[[bin]]
name = "pqc-server"
path = "src/server/main.rs"

# Removed normal client - use interactive client instead
# [[bin]]
# name = "pqc-client" 
# path = "src/client/main.rs"

# Legacy stub GUI (kept for reference)
# [[bin]]
# name = "pqc-gui"
# path = "src/gui/legacy_stub_main.rs"

[[bin]]
name = "pqc-interactive"
path = "src/interactive_client.rs"

[[bin]]
name = "pqc-enhanced-gui"
path = "src/gui/enhanced_main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# TLS/DTLS support
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# Post-quantum cryptography (Kyber)
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization for UDP packets

# GUI (egui)
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
parking_lot = "0.12"

# Audio support
cpal = "0.15"  # Cross-platform audio I/O
rubato = "0.14"  # Sample rate conversion
ringbuf = "0.3"  # Lock-free ring buffer for audio

# Config parsing
toml = "0.8"

[features]
default = ["gui"]
gui = ["eframe", "egui"]

[profile.release]
lto = true
strip = true
